Fix small layout bug

--- a/webclient/style.css
+++ b/webclient/style.css
@@ -395,7 +395,9 @@ input[name=playlist_name] {
     opacity: 0;
     height:calc(100% - 115px - 115px - 20px); /** Full height - top bar - bottom bar - extra margin**/
     top:50%;  
-    transform: translateY(-50%);
+    width:96%;
+    left:50%;
+    transform: translate(-50%,-50%);
     transition: visibility 0.3s, opacity 0.3s linear;  
     box-shadow: 0px 0px 10px #000000;
     border-radius:10px;
